# tum-ai-multiclass-classification

./: .gitignore  .python-version  Book1.twb  README.md  pyproject.toml
data/: test_processed.csv  train_processed.csv
experiments/: XAI.ipynb  wierd_idea.ipynb
experiments/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
experiments/catboost_info/learn/: events.out.tfevents
src/: labels_result.csv  modeling.ipynb  preprocessing.ipynb  submissions.csv
src/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/catboost_info/learn/: events.out.tfevents
src/catboost_info/test/: events.out.tfevents
